src/objects/RMA__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Configuration_Details__c</fullName>
        <description>Additional configuration details like FW versions, HBA, etc.</description>
        <label>Configuration Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Canceled__c</fullName>
        <label>Date/Time of Canceled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Creation__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date/Time of Creation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Returned__c</fullName>
        <label>Date/Time of Returned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Shipped__c</fullName>
        <label>Date/Time of Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Please enter detailed test why this RMA is being done so engineering can use for root cause analysis.</description>
        <label>Detailed Reason for RMA</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eng_Failure_Analysis_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eng. Failure Analysis Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Curtiss Wright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seagate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SuperMicro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outgoing_Tracking_Number__c</fullName>
        <description>Shipper tracking number from Nimble to Customer</description>
        <label>Outgoing Tracking Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Category__c</fullName>
        <label>Part Category</label>
        <picklist>
            <picklistValues>
                <fullName>Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Disk Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mounting Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVRAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid State Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <picklist>
            <picklistValues>
                <fullName>10Gb NIC Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160GB SSDSA2CW16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160GB SSDSA2M160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1TB HDD Toshiba for ES1-H25 Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1TB HDD WD1002FBYS-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1TB HDD WD1003FBYX-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2TB HDD Toshiba for ES1-H45 Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2TB HDD WD2003FYYS-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300GB SSDSA2CW30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3TB HDD ST33000650SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3TB HDD Toshiba for ES1-H65 Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80GB SSDSA2CW08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80GB SSDSA2M080</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS210 Bezel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS210 Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS210 Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS210 Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS210 System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS210 System (no disks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220 Bezel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220 Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220 Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220G Bezel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220G Chassis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220G Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220G Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220G System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220G System (no disks)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220 Power Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS220 System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RCA_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if RCA has been completed</description>
        <label>RCA Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMA_Reason__c</fullName>
        <label>RMA Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Parts Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis - bad controller slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis - bad disk slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis - bad LED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis - bad power supply slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller Power-on Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged by Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged in Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disks Not Seen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downrev Firmware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eval Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fan Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDD Failed (proactive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Part Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LED Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loaner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Part Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Process Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC Failed (10Gb)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC Failed (1Gb)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVRAM Battery Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVRAM Battery Wont Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVRAM Memory Errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVRAM Not Seen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Supply Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM Memory Errors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_State__c</fullName>
        <label>RMA State</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_Status__c</fullName>
        <label>RMA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_Tracking_Number__c</fullName>
        <description>Shipper tracking number from Customer to Nimble</description>
        <label>Return Tracking Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMAs (Return to)</relationshipLabel>
        <relationshipName>RMAs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Shipping_Instructions__c</fullName>
        <label>Special Shipping Instructions</label>
        <type>TextArea</type>
    </fields>
    <label>RMA</label>
    <nameField>
        <displayFormat>RMA-{00000}</displayFormat>
        <label>RMA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>